Update the docs

--- a/docs/pages/about.mdx
+++ b/docs/pages/about.mdx
@@ -1,96 +1,171 @@
 # ℹ️ About AgentVectorDB
 
 ## Overview
-AgentVectorDB is a flagship open-source project by [Superagentic AI](https://super-agentic.ai), designed to revolutionize how AI agents store, retrieve, and manage their cognitive states.
+AgentVectorDB is a flagship open-source project by [Superagentic AI](https://super-agentic.ai), designed to revolutionize how AI agents store, retrieve, and manage their cognitive states. Built as a specialized layer on top of LanceDB, it provides optimized memory management capabilities specifically for AI agents.
+
+<div className="info-box">
+  <h3>💡 Built on LanceDB</h3>
+  <p>AgentVectorDB is not a competitor to LanceDB, but rather extends its capabilities for AI agent use cases. We share the same Apache 2.0 license and build upon LanceDB's robust foundation.</p>
+</div>
 
 ## About Superagentic AI
 
 [Superagentic AI](https://super-agentic.ai) is a pioneering company dedicated to building cutting-edge AI agent tools and software. Our mission is to enable safer, smarter agentic systems through Agent Experience (AgentEx) for businesses.
 
 ### Our Focus
-- **Agent Experience (AgentEx)**: Developing tools that enhance how AI agents interact with data and systems
-- **Safety-First Approach**: Building reliable, secure, and ethical AI agent infrastructure
-- **Business Integration**: Creating enterprise-ready solutions for AI agent deployment
+- **Agent Experience (AgentEx)**: 
+  - Developing tools that enhance AI agent interactions
+  - Optimizing agent memory and cognition
+  - Creating seamless agent workflows
+
+- **Safety-First Approach**: 
+  - Building reliable, secure infrastructure
+  - Implementing ethical AI principles
+  - Ensuring data privacy and security
+
+- **Business Integration**: 
+  - Enterprise-ready solutions
+  - Scalable agent deployments
+  - Production-grade reliability
 
 ## Project Leadership
 
 ### Core Team
-- **[Shashi Jagtap](https://github.com/shashijagtap)** - Project Lead & Founder
-- Engineering Team at Superagentic AI
-- Open Source Contributors
+- **[Shashi Jagtap](https://github.com/shashijagtap)**
+  - Project Lead & Founder
 
-## Technical Details
+
+- **Open Source Contributors**
+  - Community Development
+  - Feature Enhancement
+  - Bug Fixes and Testing
+
+## Technical Architecture
 
 ### Built with Modern Stack
-- LanceDB for vector operations
-- Python 3.8+ compatibility
-- Async-first architecture
-- Enterprise-grade security
+- **Vector Operations**: 
+  - LanceDB core integration
+  - Optimized similarity search
+  - Efficient vector indexing
+
+- **Python Ecosystem**:
+  - Python 3.8+ compatibility
+  - AsyncIO integration
+  - Type hints support
+  - Modern coding patterns
+
+- **Enterprise Features**:
+  - Async-first architecture
+  - Production-grade security
+  - Scalable infrastructure
+  - Monitoring capabilities
 
 ### Key Features
-- Optimized for agent memory management
-- High-performance vector operations
-- Flexible embedding support
-- Rich metadata handling
-- Async/sync API support
+- **Memory Management**:
+  - Optimized for agent cognition
+  - Contextual memory retrieval
+  - Importance-based scoring
+  - Memory pruning strategies
+
+- **Vector Operations**:
+  - High-performance search
+  - Batch processing support
+  - Custom embedding support
+  - Efficient indexing
+
+- **API Support**:
+  - Async/sync interfaces
+  - RESTful endpoints
+  - WebSocket support
+  - SDK integration
+
+## Development Philosophy
+
+### Core Principles
+1. **Agent-First Design**
+   - Optimized for AI agents
+   - Cognitive architecture support
+   - Natural interaction patterns
+
+2. **Performance Focus**
+   - Speed optimization
+   - Resource efficiency
+   - Scalability built-in
+
+3. **Developer Experience**
+   - Intuitive APIs
+   - Comprehensive docs
+   - Example-driven learning
 
 ## Open Source Commitment
 
 AgentVectorDB is proudly open source, released under the Apache-2.0 license. We believe in:
-- Transparent development
-- Community collaboration
-- Shared innovation
-- Ethical AI development
+- **Transparent Development**:
+  - Public roadmap
+  - Open discussions
+  - Community feedback
+
+- **Community Collaboration**:
+  - Shared knowledge
+  - Collective improvement
+  - Educational resources
+
+- **Ethical AI Development**:
+  - Responsible AI practices
+  - Safety considerations
+  - Ethical guidelines
 
 ## Contributing
 
-We welcome contributions from the community! Here's how you can get involved:
-
 ### Ways to Contribute
-- Submit bug reports and feature requests
-- Improve documentation
-- Share use cases and examples
-- Submit pull requests
+1. **Code Contributions**
+   - Feature development
+   - Bug fixes
+   - Performance improvements
 
+2. **Documentation**
+   - Technical writing
+   - Example creation
+   - Tutorial development
 
-> Check our [Contributing Guidelines](https://github.com/superagenticai/agentvectordb/blob/main/CONTRIBUTING.md) for detailed information.
+3. **Community Support**
+   - Issue triage
+   - Question answering
+   - Use case sharing
 
 ## Community & Support
 
-### Get in Touch
-- [GitHub Discussions](https://github.com/superagenticai/agentvectordb/discussions)
-- [Discord Community](https://discord.gg/agentvectordb)
+### Connect With Us
+
 - [Twitter Updates](https://twitter.com/superagenticai)
 
-### Professional Support
-For enterprise support and consulting, contact:
-- Email: support@super-agentic.ai
-- Website: [super-agentic.ai](https://super-agentic.ai)
+### Enterprise Solutions
+For professional support:
+```plaintext
+Email: enterprise@super-agentic.ai
+Website: https://super-agentic.ai
+Support: https://super-agentic.ai/support
+```
 
-## License & Attribution
+## Citation & Recognition
 
-AgentVectorDB is licensed under the [Apache License 2.0](https://github.com/superagenticai/agentvectordb/blob/main/LICENSE).
-
+### Academic Citation
 ```bibtex
 @software{agentvectordb2024,
   title = {AgentVectorDB: The Cognitive Core for AI Agents},
-  author = {Jagtap, Shashi and Superagentic AI},
+  author = {Jagtap, Shashi and {Superagentic AI}},
   year = {2024},
-  url = {https://github.com/superagenticai/agentvectordb}
+  url = {https://github.com/superagenticai/agentvectordb},
+  organization = {Superagentic AI}
 }
 ```
 
-> [!info]
-> AgentVectorDB is a trademark of Superagentic AI. All rights reserved.
+### Special Thanks
+- LanceDB Team for the foundational technology
+- Open source contributors
+- Early adopters and testers
 
-## Acknowledgments
 
-Special thanks to:
-- Our open source contributors
-- The LanceDB team
-- The broader AI agent community
-- Our enterprise partners
-
----
-
-Built with ❤️ by [Superagentic AI](https://super-agentic.ai)
+<div className="footer-note">
+  <p>Built with ❤️ by <a href="https://super-agentic.ai">Superagentic AI</a></p>
+</div>
