--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,74 +1,132 @@
 # 🧠 AgentVectorDB
 
-> The Cognitive Core for Your AI Agents
+> The Cognitive Core for Your AI Agents - Built on LanceDB
 
-AgentVectorDB is a lightweight, embeddable vector database designed specifically for AI agents. It provides efficient memory storage, retrieval, and context management built on LanceDB.
 
-## 🌟 Key Features
 
-### 💫 Purpose-Built for Agents
-- Optimized for agent memory and context management
-- Flexible schema design for various agent types
-- Built-in importance scoring and metadata
+## 🎯 Why AgentVectorDB?
 
-### ⚡️ High Performance
-- Fast vector similarity search
-- Efficient memory management
-- Minimal resource footprint
+## 🎯 Key Features
 
-### 🔄 Async First
-- Native async/await support
-- Perfect for real-time agent interactions
-- Efficient concurrent operations
+- 📝 Semantic search optimized for AI agent memories
+- 🔄 Async/sync APIs for flexible integration
+- 🔍 Advanced filtering and querying capabilities
+- 📊 Customizable schema support
+- 🚄 High-performance vector operations
+- 💾 Persistent storage with LanceDB backend
 
-### 🛠 Developer Friendly
-- Simple, intuitive API
-- Extensive documentation
-- Ready-to-use examples
+## ✅ Prerequisites
 
-## 🚀 Quick Start
+Before installing AgentVectorDB, ensure you have:
+- 🐍 Python 3.8 or higher installed
+- 📦 pip (Python package installer)
+- 🔧 Virtual environment tool (venv or conda)
+- 💻 Terminal or command prompt access
 
-```python
-from agentvectordb import AgentVectorDBStore
+## 🎁 Key Features
 
-# Initialize store
-store = AgentVectorDBStore(db_path="./agent_memory")
 
-# Create collection
-collection = store.get_or_create_collection("thoughts")
+AgentVectorDB combines powerful cognitive architecture capabilities with technical excellence to provide a comprehensive solution for AI agent memory management.
 
-# Add memory
-collection.add(
-    content="Planning next steps",
-    type="thought",
-    importance_score=0.9
-)
-```
+### 🧠 Cognitive Architecture
+Our cognitive architecture is designed to mirror human memory systems, providing both short-term and long-term memory capabilities with intelligent retrieval mechanisms.
 
-## 📚 Documentation Sections
+- Long-term memory storage
+- Short-term context management
+- Importance-based retrieval
+- Semantic search capabilities
 
-- [🎯 Getting Started](getting-started) - Quick installation and setup
-- [💡 Core Concepts](concepts) - Understanding the basics
-- [📖 Guides](guides) - Detailed usage instructions
-- [🧪 Examples](examples) - Real-world usage examples
-- [🛠 API Reference](api-reference) - Complete API documentation
+This architecture ensures that your AI agents can remember and prioritize information like a human, vastly improving their interaction quality and decision-making processes.
 
-## 💻 Installation
+### 🔧 Technical Excellence
+AgentVectorDB is built with a focus on technical superiority, offering a range of features that ensure flexibility, performance, and ease of use.
 
-```bash
-pip install agentvectordb
-```
+- Async/sync API support
+- Custom schema definitions
+- Advanced filtering options
+- Batch operations support
 
-> [!tip] 
-> Check out our [Getting Started](getting-started) guide for detailed installation instructions!
+These technical features provide developers with the tools needed to implement complex memory management scenarios with ease, whether in synchronous or asynchronous environments.
 
-## 🤝 Community
+### 📊 Performance Metrics
+We understand that performance is key to user satisfaction and operational efficiency. AgentVectorDB is engineered to deliver outstanding performance metrics.
 
-Join our growing community:
-- [GitHub Discussions](https://github.com/superagenticai/agentvectordb/discussions)
-- [Discord Community](https://discord.gg/agentvectordb)
-- [Twitter Updates](https://twitter.com/agentvectordb)
+- Sub-millisecond query times
+- Efficient vector indexing
+- Minimal memory footprint
+- Optimized storage format
 
-## 📄 License
+Such performance ensures that your applications remain responsive and efficient, even as they scale.
 
-AgentVectorDB is available under the Apache 2.0 License.
+[🎯 Start Building Now](getting-started)
+
+## 🛠️ Use Cases
+
+AgentVectorDB powers a wide range of applications across different industries. From personal AI assistants to enterprise-scale systems, our solution adapts to various use cases while maintaining optimal performance.
+
+### 🤖 AI Agents
+
+- Personal AI assistants
+- Customer service bots
+- Research agents
+- Task automation agents
+
+AgentVectorDB provides the necessary memory management capabilities that allow AI agents to perform complex tasks, learn from interactions, and provide personalized experiences.
+
+### 💼 Enterprise Applications
+- Knowledge management systems
+- Customer experience platforms
+- Decision support systems
+- Process automation
+
+In enterprise settings, AgentVectorDB excels by managing vast amounts of contextual data, thus enhancing knowledge workers' productivity and decision-making quality.
+
+### 🔬 Research & Development
+- AI research projects
+- Cognitive architecture development
+- Agent behavior studies
+- Performance benchmarking
+
+Researchers benefit from AgentVectorDB's ability to handle experimental data and agent simulations, providing insights into AI behavior and system performance.
+
+## 📚 Documentation
+
+- [🎯 Getting Started](getting-started) - Quick setup guide
+- [💡 Core Concepts](concepts) - Fundamental principles
+- [📖 Guides](guides) - Implementation tutorials
+- [🧪 Examples](examples) - Real-world examples
+- [🛠 API Reference](api-reference) - Complete API docs
+
+Our documentation is comprehensive and designed to help you every step of the way, from initial setup to advanced usage scenarios.
+
+Join our community to connect with other users, share your experiences, and get support from the AgentVectorDB team.
+
+
+## 📄 License & Attribution
+
+AgentVectorDB shares the same Apache 2.0 License as LanceDB, maintaining full compatibility and open-source principles. We're proud to build upon and extend LanceDB's capabilities for agent-specific use cases.
+
+<div className="license-box p-6 bg-gray-50 rounded-lg shadow-sm my-8">
+  <h3 className="text-lg font-bold">Relationship with LanceDB</h3>
+  <ul>
+    - Built on top of LanceDB
+    - Shares Apache 2.0 License
+    - Specialized for AI agents
+    - Not a competitor
+    - Complementary solution
+  </ul>
+</div>
+
+<div className="cta-section text-center py-12 bg-gradient-to-r from-blue-50 to-green-50">
+  <h2 className="text-3xl font-bold mb-6">Ready to Build Smarter AI Agents?</h2>
+  <div className="flex justify-center space-x-4">
+    <a href="/getting-started" className="cta-button primary">
+      🚀 Start Building
+    </a>
+    <a href="https://github.com/superagenticai/agentvectordb" className="cta-button github">
+      ⭐️ Star on GitHub
+    </a>
+  </div>
+</div>
+
+[🚀 Start Building Your AI Agents Now](getting-started)
