--- a/docs/pages/api-reference.mdx
+++ b/docs/pages/api-reference.mdx
@@ -3,219 +3,347 @@
 ## Store Classes
 
 ### AgentVectorDBStore
+Core class for managing vector database operations.
 
-The main synchronous store class for managing vector collections.
-
+#### Constructor
 ```python
-from agentvectordb import AgentVectorDBStore
-
-store = AgentVectorDBStore(
-    db_path: str = "./vector_db",
-    create_if_missing: bool = True
-)
+AgentVectorDBStore(
+    db_path: str = "./vector_db"
+) -> AgentVectorDBStore
 ```
 
-#### Parameters
-- `db_path`: Path to the database directory
-- `create_if_missing`: Create directory if it doesn't exist
+**Parameters:**
+- `db_path` (str): Path to database directory
+
+**Returns:**
+- `AgentVectorDBStore`: Store instance
+
+**Raises:**
+- `InitializationError`: If database initialization fails
+- `PermissionError`: If directory access is denied
 
 #### Methods
 
-##### `get_or_create_collection`
+##### get_or_create_collection
+Creates a new collection or returns existing one.
+
 ```python
 def get_or_create_collection(
     name: str,
     embedding_function: Optional[BaseEmbeddingFunction] = None,
-    recreate: bool = False
+    recreate: bool = False,
+    schema: Optional[MemoryEntrySchema] = None
 ) -> AgentMemoryCollection
 ```
 
-##### `list_collections`
+**Parameters:**
+- `name` (str): Unique collection identifier
+- `embedding_function` (BaseEmbeddingFunction, optional): Function for generating embeddings
+- `recreate` (bool): If True, deletes existing collection
+- `schema` (MemoryEntrySchema, optional): Custom schema definition
+
+**Returns:**
+- `AgentMemoryCollection`: Collection instance
+
+**Raises:**
+- `SchemaError`: If schema validation fails
+- `OperationError`: If collection creation fails
+
+**Example:**
+```python
+ef = DefaultTextEmbeddingFunction(dimension=384)
+collection = store.get_or_create_collection(
+    name="agent_memories",
+    embedding_function=ef
+)
+```
+
+##### list_collections
+Returns list of available collections.
+
 ```python
 def list_collections() -> List[str]
 ```
 
-##### `delete_collection`
+**Returns:**
+- `List[str]`: Names of available collections
+
+**Example:**
 ```python
-def delete_collection(name: str) -> bool
+collections = store.list_collections()
+print(f"Available collections: {collections}")
 ```
 
 ### AsyncAgentVectorDBStore
+Asynchronous version of AgentVectorDBStore.
 
-Asynchronous version of the store class.
-
+#### Constructor
 ```python
-from agentvectordb import AsyncAgentVectorDBStore
-
-store = AsyncAgentVectorDBStore(
-    db_path: str = "./vector_db",
-    create_if_missing: bool = True
-)
+AsyncAgentVectorDBStore(
+    db_path: str = "./vector_db"
+) -> AsyncAgentVectorDBStore
 ```
+
+**Parameters:**
+Same as AgentVectorDBStore
 
 #### Methods
-
-##### `get_or_create_collection`
-```python
-async def get_or_create_collection(
-    name: str,
-    embedding_function: Optional[BaseEmbeddingFunction] = None,
-    recreate: bool = False
-) -> AsyncAgentMemoryCollection
-```
+All methods are async versions of AgentVectorDBStore methods.
 
 ## Collection Classes
 
 ### AgentMemoryCollection
-
-Manages a collection of agent memories.
-
-```python
-collection = store.get_or_create_collection("memories")
-```
+Manages memory entries within a collection.
 
 #### Methods
 
-##### `add`
+##### add
+Adds a single memory entry.
+
 ```python
 def add(
     content: str,
     type: str = "memory",
     importance_score: float = 0.5,
-    metadata: Optional[Dict[str, Any]] = None
+    metadata: Optional[Dict[str, Any]] = None,
+    vector: Optional[np.ndarray] = None
 ) -> Dict[str, Any]
 ```
 
-##### `query`
+**Parameters:**
+- `content` (str): Text content of memory
+- `type` (str): Category/type of memory
+- `importance_score` (float): Value between 0.0 and 1.0
+- `metadata` (Dict[str, Any], optional): Additional metadata
+- `vector` (np.ndarray, optional): Pre-computed embedding vector
+
+**Returns:**
+- `Dict[str, Any]`: Added memory entry
+
+**Raises:**
+- `SchemaError`: If data validation fails
+- `EmbeddingError`: If vector generation fails
+
+**Example:**
 ```python
-def query(
-    query_text: str,
-    k: int = 5,
-    filter_sql: Optional[str] = None
+entry = collection.add(
+    content="User preference noted",
+    type="user_pref",
+    importance_score=0.8,
+    metadata={"category": "ui", "user_id": "123"}
+)
+```
+
+##### add_batch
+Adds multiple memories efficiently.
+
+```python
+def add_batch(
+    entries: List[Dict[str, Any]],
+    batch_size: int = 100
 ) -> List[Dict[str, Any]]
 ```
 
-##### `delete`
+**Parameters:**
+- `entries` (List[Dict]): List of memory entries
+- `batch_size` (int): Size of processing batches
+
+**Returns:**
+- `List[Dict]`: Added memory entries
+
+**Note:** Requires minimum 8 entries for KMeans index creation
+
+**Example:**
 ```python
-def delete(filter_sql: str) -> bool
+memories = [
+    {
+        "content": "First observation",
+        "type": "observation",
+        "importance_score": 0.7
+    },
+    # ... at least 7 more entries
+]
+results = collection.add_batch(memories)
 ```
 
-##### `update`
+##### query
+Performs semantic search.
+
 ```python
-def update(
-    filter_sql: str,
-    updates: Dict[str, Any]
-) -> bool
+def query(
+    query_text: Optional[str] = None,
+    query_vector: Optional[np.ndarray] = None,
+    k: int = 5,
+    filter_sql: Optional[str] = None,
+    include_vectors: bool = False,
+    select_columns: Optional[List[str]] = None
+) -> List[Dict[str, Any]]
 ```
 
-### AsyncAgentMemoryCollection
+**Parameters:**
+- `query_text` (str, optional): Text to search for
+- `query_vector` (np.ndarray, optional): Pre-computed query vector
+- `k` (int): Number of results to return
+- `filter_sql` (str, optional): SQL filter expression
+- `include_vectors` (bool): Include embedding vectors in results
+- `select_columns` (List[str], optional): Specific columns to return
 
-Asynchronous version of the collection class.
+**Returns:**
+- `List[Dict]`: Matching memory entries
 
+**Example:**
 ```python
-collection = await store.get_or_create_collection("memories")
-```
+# Basic query
+results = collection.query(
+    query_text="system performance",
+    k=3
+)
 
-#### Methods
-
-##### `add`
-```python
-async def add(
-    content: str,
-    type: str = "memory",
-    importance_score: float = 0.5,
-    metadata: Optional[Dict[str, Any]] = None
-) -> Dict[str, Any]
+# Advanced query
+results = collection.query(
+    query_text="errors",
+    k=5,
+    filter_sql="type = 'error' AND importance_score > 0.8",
+    include_vectors=True
+)
 ```
 
 ## Embedding Functions
 
 ### BaseEmbeddingFunction
-
-Base class for implementing custom embedding functions.
+Abstract base class for embedding functions.
 
 ```python
-from agentvectordb.embeddings import BaseEmbeddingFunction
-
-class CustomEmbedder(BaseEmbeddingFunction):
-    def __init__(self):
-        super().__init__(dimension=384)
+class BaseEmbeddingFunction:
+    def __init__(self, dimension: int):
+        """
+        Args:
+            dimension (int): Embedding vector dimension
+        """
+        self._dimension = dimension
+    
+    @property
+    def dimension(self) -> int:
+        """Get embedding dimension"""
+        return self._dimension
     
     def embed(self, texts: List[str]) -> np.ndarray:
-        # Implementation here
-        pass
+        """
+        Generate embeddings for texts.
+        
+        Args:
+            texts (List[str]): Texts to embed
+            
+        Returns:
+            np.ndarray: Embedding vectors
+            
+        Raises:
+            EmbeddingError: If embedding generation fails
+        """
+        raise NotImplementedError
 ```
 
 ### DefaultTextEmbeddingFunction
-
-Built-in embedding function for text.
+Default embedding implementation.
 
 ```python
-from agentvectordb.embeddings import DefaultTextEmbeddingFunction
-
-embedder = DefaultTextEmbeddingFunction(dimension=64)
+class DefaultTextEmbeddingFunction(BaseEmbeddingFunction):
+    def __init__(
+        self,
+        dimension: int = 384,
+        normalize: bool = True
+    ):
+        """
+        Args:
+            dimension (int): Embedding dimension
+            normalize (bool): Normalize vectors
+        """
+        super().__init__(dimension)
+        self.normalize = normalize
 ```
 
-## Schemas
+## Schema Management
 
 ### MemoryEntrySchema
-
-Default schema for memory entries.
-
-```python
-from agentvectordb.schemas import MemoryEntrySchema
-
-schema = MemoryEntrySchema(
-    vector_dimension=384,
-    additional_fields={
-        "category": str,
-        "tags": List[str]
-    }
-)
-```
-
-## Exceptions
-
-### AgentVectorException
-Base exception class for all AgentVectorDB errors.
-
-### Common Exceptions
-```python
-from agentvectordb.exceptions import (
-    InitializationError,  # Database initialization failed
-    SchemaError,         # Invalid schema definition
-    QueryError,          # Invalid query parameters
-    OperationError,      # Operation failed
-    EmbeddingError      # Embedding generation failed
-)
-```
-
-## Utils
-
-### Configuration
+Base schema for memory entries.
 
 ```python
-from agentvectordb.utils import configure_logging
-
-configure_logging(level="DEBUG")
+class MemoryEntrySchema:
+    def __init__(
+        self,
+        vector_dimension: int,
+        additional_fields: Optional[Dict[str, Any]] = None
+    ):
+        """
+        Args:
+            vector_dimension (int): Embedding dimension
+            additional_fields (Dict): Extra schema fields
+        """
 ```
 
-### Type Definitions
+## Exception Classes
+
+### AgentVectorDBException
+Base exception class.
 
 ```python
-from agentvectordb.types import (
-    MemoryEntry,
-    QueryResult,
-    EmbeddingVector,
-    MetadataDict
-)
+class AgentVectorDBException(Exception):
+    """Base exception for AgentVectorDB"""
+    pass
 ```
 
+### Specific Exceptions
 
-> All async methods should be called with `await` and used within an async context.
+- `InitializationError`: Database initialization failed
+- `SchemaError`: Schema validation failed
+- `QueryError`: Invalid query
+- `OperationError`: Operation failed
+- `EmbeddingError`: Embedding generation failed
 
+## Type Definitions
 
-> The `recreate` parameter in `get_or_create_collection` will delete existing collections!
+```python
+MemoryEntry = TypedDict('MemoryEntry', {
+    'content': str,
+    'type': str,
+    'importance_score': float,
+    'metadata': Optional[Dict[str, Any]],
+    'vector': Optional[List[float]]
+})
 
+QueryResult = TypedDict('QueryResult', {
+    'content': str,
+    'type': str,
+    '_distance': float,
+    'metadata': Optional[Dict[str, Any]]
+})
+```
 
-> Use type hints and proper exception handling for better code reliability.
+## Constants
+
+```python
+DEFAULT_DIMENSION = 384
+MIN_KMEANS_ENTRIES = 8
+DEFAULT_BATCH_SIZE = 100
+```
+
+## Configuration
+
+### Logging Setup
+```python
+def configure_logging(
+    level: str = "INFO",
+    log_file: Optional[str] = None,
+    format: str = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+) -> None:
+    """
+    Configure logging settings.
+    
+    Args:
+        level (str): Log level
+        log_file (str, optional): Log file path
+        format (str): Log message format
+    """
+```
+
+For more examples and detailed usage, check the [Examples](./examples.mdx) section.
